log
jue., 16 de mar. de 2023 22:07:06: 
 tests:  0|7
total_score: 0/70
2f2b6f1
jue., 16 de mar. de 2023 22:09:14: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b784c2b
jue., 16 de mar. de 2023 22:11:30: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
0cd20eb
jue., 16 de mar. de 2023 22:13:38: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|6
total_score: 10/70
16ea592
jue., 16 de mar. de 2023 22:14:39: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'arrayMaxMin':
exercises.c:28:4: error: implicit declaration of function 'print' [-Werror=implicit-function-declaration]
    print(a[0]);
    ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aadbd3c
